# PineCast

./: .gitignore  CMakeLists.txt  PodcastWindow.glade  README.md  UINAMES.h  compile.sh  main.cpp
.github/workflows/: cmake.yml
Docs/: doxygenConfig
Docs/html/: DataTools_8h.html  DataTools_8h__dep__incl.map  DataTools_8h__dep__incl.md5  DataTools_8h__incl.map  DataTools_8h__incl.md5  DataTools_8h_source.html  LibraryTools_8h.html  LibraryTools_8h__dep__incl.map  LibraryTools_8h__dep__incl.md5  LibraryTools_8h__incl.map  LibraryTools_8h__incl.md5  LibraryTools_8h_source.html  PodcastMetaDataLists_8h.html  PodcastMetaDataLists_8h__dep__incl.map  PodcastMetaDataLists_8h__dep__incl.md5  PodcastMetaDataLists_8h__incl.map  PodcastMetaDataLists_8h__incl.md5  PodcastMetaDataLists_8h_source.html  README_8md.html  UINAMES_8h.html  UINAMES_8h__dep__incl.map  UINAMES_8h__dep__incl.md5  UINAMES_8h_source.html  annotated.html  caching_8h.html  caching_8h__dep__incl.map  caching_8h__dep__incl.md5  caching_8h__incl.map  caching_8h__incl.md5  caching_8h_source.html  classDataTools-members.html  classDataTools.html  classPodcastMetaDataList-members.html  classPodcastMetaDataList.html  classcaching-members.html  classcaching.html  classes.html  classpodcastDataTypes.html  classpodcastDataTypes_1_1episodeList-members.html  classpodcastDataTypes_1_1episodeList.html  (+40 more)
Docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  (+27 more)
Libs/: AudioManager.h  AudioPlayer.h  Current_Episode_UI.h  DataTools.h  LibraryTools.h  Libs.h  PlayPodcast.h  PodcastDataBundle.h  PodcastMetaDataLists.h  PodcastsLibrary.h  PodcastsStore.h  PreviewPageClass.h  UIFunctions.h  UINAMES.h  UITools.h  caching.h  filepaths.h  miniaudio.h  podcastDataTypes.h  podcastEpisodeTypes.h  webTools.h
